--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rustc-serialize = "*"
 time = "*"
 hyper = "0.6.16"
 cookie = "0.1.21"
+url = "0.2.38"
 
 [dependencies.nickel_postgres]
 git = "https://github.com/matthewbentley/nickel-postgres.git"
