--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ r2d2_postgres = "*"
 r2d2 = "*"
 openssl = "0.6.7"
 uuid = "*"
-serde_json = "*"
+serde_json = "0.6.0"
 cookie = "0.1.21"
 url = "0.2.38"
 
